k8s-prd/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: poupatize
  name: poupatize-web
  labels:
    app: poupatize-web
spec:
  selector:
    matchLabels:
      app: poupatize-web
  replicas: 1
  template:
    metadata:
      labels:
        app: poupatize-web
    spec:
      containers:
        - name: poupatize-web
          image: registry.digitalocean.com/cr-poupatize/poupatize_web:0.1
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: poupatize
  name: poupatize-web-svc
spec:
  selector:
    app: poupatize-web
  ports:
    - protocol: TCP
      port: 3000
